Fix jumping for all sites

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -219,6 +219,18 @@ img {
     height: 2px;
 }
 
+/* JUMPING EFFECT */
+
+@keyframes jump {
+  0%   {transform: translate3d(0,0,0) scale3d(1,1,1);}
+  40%  {transform: translate3d(0,30%,0) scale3d(.7,1.5,1);}
+  100% {transform: translate3d(0,100%,0) scale3d(1.5,.7,1);}
+}
+.jump {
+  transform-origin: 50% 50%;
+  animation: jump .5s linear alternate infinite;
+}
+
 
 /* SPONSORS */
 
